# tedep

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  MIT-LICENSE  README.md  Tiltfile  clippy.toml  justfile  local.values.yaml  rustfmt.toml
.github/workflows/: rust.yaml
apps/tedep-ep/: Cargo.toml
apps/tedep-ep/src/: config.rs  controller.rs  main.rs  metrics.rs  tfws.rs  workspace.rs
apps/tedep-ep/src/tfws/: config.rs  context.rs  error.rs  metrics.rs
apps/tedep-ep/src/workspace/: config.rs  context.rs  error.rs  metrics.rs
charts/tedep-controller/: Chart.yaml  values.yaml
charts/tedep-controller/templates/: _common.tpl  _helpers.tpl  deployment.yaml  namespace.yaml  role-binding.yaml  role.yaml  service-account.yaml
crates/kubox/: Cargo.toml
crates/kubox/src/: app.rs  lib.rs  request.rs  service.rs
crates/tedep/: Cargo.toml
yaml/: sample.tfr.yaml
